testdata/test/bad-step.yaml
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: Test
metadata:
  name: test-1
spec:
  steps:
  - foo: bar
