testdata/test/custom-test.yaml
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: Test
metadata:
  name: custom-test
spec:
  skip: false
  concurrent: true
  skipDelete: true
  namespace: "custom-namespace-for-test"
  steps:
    - name: "test-step-initial-setup"
      timeouts:
        apply: "5s"
      skipDelete: false
      try:
        - apply:
          - file: /configs/service-config.yaml
            timeout: 45s
            shouldFail: false
            continueOnError: true
    - name: "test-step-apply-changes"
      try:
        - apply:
          - file: /configs/service-config.yaml
            timeout: 45s
            shouldFail: false
            continueOnError: true
          assert:
            - file: /assertions/verify-service.yaml
              timeout: 30s
              continueOnError: false
