testdata/test/invalid_structure.yaml
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: Test
metadata:
  name: test-invalid-structure
invalidKey: thisShouldNotBeHere
