testdata/test/invalid_yaml.yaml
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: Test
metadata:
  name: test-invalid-yaml
spec:
  steps:
    - spec:
      operations:
        - apply:
          - fileRef:
            file: this_is_invalid
