testdata/test/ok.yaml
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: Test
metadata:
  name: test-1
spec:
  steps:
  - try:
    - apply:
        file: foo.yaml
    catch:
    - collect:
        podLogs:
          namespace: foo
    - collect:
        events:
          namespace: foo
    - exec:
        command:
          entrypoint: time
    - exec:
        script:
          content: echo "hello"
  - try:
    - assert:
        file: bar.yaml
    finally:
    - collect:
        podLogs:
          namespace: foo
    - collect:
        events:
          namespace: foo
    - exec:
        command:
          entrypoint: time
    - exec:
        script:
          content: echo "hello"
